crates/vexor-compiler/tests/golden/error/input/stroke_join_invalid.vx
-- invalid stroke join kind
export Circle(50) >> strokeJoin("rounded")
